--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -122,28 +122,28 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
     >
       <!-- COLLAPSE CONTENT -->
       <a
-        href="/"
+        href="/shop/casual"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
         Casual <ArrowDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
-        href="/"
+        href="/shop/formal"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
         Formal <ArrowDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
-        href="/"
+        href="/shop/party"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
         Party <ArrowDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
-        href="/"
+        href="/shop/gym"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
