product page & page shop improvements

--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -1,5 +1,5 @@
 ---
-import CardProduct from "@components/CardProduct.astro";
+import CardProduct from "@components/Products/CardProduct.astro";
 import { Image } from "astro:assets";
 
 const newArrivals = [
