--- a/src/components/ColorSelector.astro
+++ b/src/components/ColorSelector.astro
@@ -1,6 +1,8 @@
 ---
 interface ColorSelectorProps {
+  type?: 'checkbox' | 'radio';
   className: string;
+  checked?: boolean;
   name?: string;
   size?: string;
   id?: string;
@@ -9,8 +11,10 @@ interface ColorSelectorProps {
 const {
   id,
   name,
+  type = 'checkbox',
   className = "bg-black",
-  size = "38px"
+  checked = false,
+  size = "38px",
 } = Astro.props as ColorSelectorProps;
 
 const getFillColor = (className: string): string => {
@@ -29,7 +33,8 @@ const getFillColor = (className: string): string => {
 >
   <input
     class="absolute z-20 w-full h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 opacity-0 cursor-pointer"
-    type="checkbox"
+    checked={checked}
+    type={type}
     name={name}
     id={id}
   />
