--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,9 +65,9 @@ import MobileNav from "@components/react-components/MobileNav";
       </li>
 
       <!-- Otros Enlaces de Navegación -->
-      <li><a href="/">On Sale</a></li>
-      <li><a href="/">New Arrivals</a></li>
-      <li><a href="/">Brands</a></li>
+      <li><a class="truncate" href="/">On Sale</a></li>
+      <li><a class="truncate" href="/">New Arrivals</a></li>
+      <li><a class="truncate" href="/">Brands</a></li>
     </ul>
   </nav>
   <!-- NAVEGACIÓN PRINCIPAL END -->
