--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import "@styles/daisyui.css";
 
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
+import { ClientRouter } from "astro:transitions";
 
 const { className, title = "Shop.Co" } = Astro.props as MainLayoutProps;
 ---
@@ -17,6 +18,7 @@ const { className, title = "Shop.Co" } = Astro.props as MainLayoutProps;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ClientRouter fallback="animate" />
   </head>
   <body>
     <Header />
