--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -48,6 +48,7 @@ import { Image } from "astro:assets";
       alt="Decorative hero pattern displaying fashion elements"
       class="md:mx-auto mt-auto w-auto"
       src="/imgs/hero-pattern.webp"
+      decoding="sync"
       loading="eager"
       width={100}
       height={200}
